--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.LandingActivity"
-    android:background="@color/color_2"
+    android:background="@drawable/gradient_shape_2"
     android:padding="20dp">
 
     <TextView
