--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,11 +7,20 @@
     android:padding="16dp"
     tools:context=".activities.LoginActivity">
 
+    <TextView
+        android:id="@+id/titleLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login to app"
+        style="@style/Title"
+        android:layout_marginTop="30dp"/>
+
     <EditText
         android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:layout_below="@+id/titleLogin"
         android:hint="Username" />
 
     <EditText
@@ -34,15 +43,26 @@
         android:background="@color/color_2"/>
 
 
-    <Button
-        android:id="@+id/buttonRegister0"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/haventaccount"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonLogin0"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="10dp"
+        android:text="I don\'t have an account"/>
+
+    <TextView
+        android:id="@+id/registerhaveaccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonLogin0"
+        android:layout_toRightOf="@+id/haventaccount"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
         android:text="Register"
-        android:background="@color/color_2"
-        android:textStyle="bold" />
+        android:textAlignment="center"
+        android:textColor="@color/color_2" />
 
 </RelativeLayout>
