--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,13 +7,22 @@
     tools:context=".activities.RegisterActivity"
     android:padding="16dp">
 
+    <TextView
+        android:id="@+id/tv_register_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        style="@style/Title"
+        android:text="Create an account"/>
+
     <EditText
         android:id="@+id/editTextUsername1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Username"
         android:inputType="text"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:layout_below="@id/tv_register_title"/>
 
     <EditText
         android:id="@+id/editTextEmail1"
@@ -45,14 +54,26 @@
         android:layout_below="@id/editTextPassword1"
         android:layout_marginTop="16dp" />
 
-    <Button
-        android:id="@+id/buttonLogin1"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/haventaccount"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:textColor="@color/white"
-        android:background="@color/color_2"
         android:layout_below="@id/buttonRegister1"
-        android:layout_marginTop="16dp" />
+        android:textAlignment="center"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="10dp"
+        android:text="I already have an account"/>
+
+    <TextView
+        android:id="@+id/loginhaveaccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonRegister1"
+        android:layout_toRightOf="@+id/haventaccount"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        android:text="Login"
+        android:textAlignment="center"
+        android:textColor="@color/color_2" />
 
 </RelativeLayout>
